--- a/03netmarble/css/style.css
+++ b/03netmarble/css/style.css
@@ -8,22 +8,19 @@
 .headerWrap h2 a:hover{background-color: rgb(255, 255, 255);color:rgb(0, 0, 0)}
 .navbar{position: absolute;right: 20px;bottom: 20px;}
 .navbar>ul>li{float: right;}
-.navbar>ul>li>a{display: block;padding:10px 20px;font-size: 18px;color: rgb(255, 255, 255);}
+.navbar>ul>li>a{display: block;padding:10px 20px;font-size: 20px;color: rgb(255, 255, 255);}
 .navbar>ul>li>a:hover{background-color: rgb(255, 255, 255);color:rgb(0, 0, 0)}
 
+/* visual */
 
 .visual{position: relative;height: 100vh;min-height:800px}
-        .visual .txtWrap{position: absolute;width: 1280px;left:50%;margin-left: -640px;color:white;height: 100%;}
+        .visual .txtWrap{position: absolute;width: 1280px;left:50%;margin-left:-640px;color:white;height: 100%;}
         .visual .txtWrap .txt{position: absolute;top: 30%;}
-        .visual .txtWrap h3{font-size: 80px ;}
+        .visual .txtWrap h3{font-size: 80px ;margin-bottom: 40px;}
         .visual .txtWrap p{font-size: 24px;margin-bottom: 15px;}
-        .visual .txtWrap a{
-            display: inline-block;background-color:white;
-            padding: 10px 20px;border-radius: 10px;
-        }
-        .visual .slideItem{
-            height:100vh;min-height:800px;
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: cover;
-        }
+        .visual .txtWrap a{display: inline-block;background-color:white;padding: 10px 20px;border-radius: 10px;}
+        .visual .slideItem{height:100vh;min-height:800px;background-position: center;background-repeat: no-repeat;background-size: cover;}
+
+/* title */
+
+/* .title01{width: 700px;background-color: rgb(255, 96, 96);} */
