--- a/03netmarble/css/style.css
+++ b/03netmarble/css/style.css
@@ -1,26 +1,41 @@
 @charset "utf-8";
-/* header */
 
-.headerWrap{width: 1920px;height: 968px; background-image: url(../images/netmable01.jpg);margin: 0 auto;}
-.headertopWrap{width: 1280px;height: 84px;display: block;margin: 0 auto;position: relative}
-.headerWrap h2{width: 172px;height: 84px;text-align: center;line-height: 80px}
-.headerWrap h2 a{color: rgb(255, 255, 255); font-size: 20px;}
-.headerWrap h2 a:hover{background-color: rgb(255, 255, 255);color:rgb(0, 0, 0)}
-.navbar{position: absolute;right: 20px;bottom: 20px;}
-.navbar>ul>li{float: right;}
-.navbar>ul>li>a{display: block;padding:10px 20px;font-size: 20px;color: rgb(255, 255, 255);}
-.navbar>ul>li>a:hover{background-color: rgb(255, 255, 255);color:rgb(0, 0, 0)}
-
-/* visual */
-
+.container{width: 1280px;margin: 0 auto}
 .visual{position: relative;height: 100vh;min-height:800px}
-        .visual .txtWrap{position: absolute;width: 1280px;left:50%;margin-left:-640px;color:white;height: 100%;}
-        .visual .txtWrap .txt{position: absolute;top: 30%;}
-        .visual .txtWrap h3{font-size: 80px ;margin-bottom: 40px;}
-        .visual .txtWrap p{font-size: 24px;margin-bottom: 15px;}
-        .visual .txtWrap a{display: inline-block;background-color:white;padding: 10px 20px;border-radius: 10px;}
-        .visual .slideItem{height:100vh;min-height:800px;background-position: center;background-repeat: no-repeat;background-size: cover;}
+.visual .txtWrap{position: absolute;width: 1280px;left:50%;margin-left: -640px;color:white;height: 100%; }
+.visual .txtWrap .txt{position: absolute;top: 30%;}
+.visual .txtWrap h3{font-size: 80px ; margin-bottom: 40px;}
+.visual .txtWrap p{font-size: 24px;margin-bottom: 15px;}
+.visual .txtWrap a{
+    display: inline-block;background-color:white;
+    padding: 10px 20px;border-radius: 10px; 
+}
+.visual .slideItem{
+    height:100vh;min-height:800px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
-/* title */
+.visual li>img{width: 100%;}
 
-/* .title01{width: 700px;background-color: rgb(255, 96, 96);} */
+.bx-wrapper {
+    -moz-box-shadow: 0 0 0 #ccc;
+    -webkit-box-shadow: 0 0 0 #ccc;
+    box-shadow: 0 0 0 #ccc;
+    border: 0 none;
+    margin-bottom: 0;
+}
+.bx-wrapper .bx-pager{
+    bottom: 30px;
+}
+.bx-wrapper .bx-pager.bx-default-pager a:hover, 
+.bx-wrapper .bx-pager.bx-default-pager a.active, 
+.bx-wrapper .bx-pager.bx-default-pager a:focus {
+    background: #f00;
+}
+
+.wrap{ position: absolute;z-index: 1;width: 100%;}
+.wrap h3{width: 172px;height: 84px;text-align: center;line-height: 80px;color: rgb(255, 255, 255);background-color: rgb(148, 43, 43);}
+.wrap li{float: right;padding: 20px;}
+.wrap li a{display: block;line-height:0px;font-size: 20px;color: rgb(255, 255, 255);}
