--- a/03netmarble/css/style.css
+++ b/03netmarble/css/style.css
@@ -35,7 +35,7 @@
     background: #f00;
 }
 
-.wrap{ position: absolute;z-index: 1;width: 100%;}
-.wrap h3{width: 172px;height: 84px;text-align: center;line-height: 80px;color: rgb(255, 255, 255);background-color: rgb(148, 43, 43);}
-.wrap li{float: right;padding: 20px;}
-.wrap li a{display: block;line-height:0px;font-size: 20px;color: rgb(255, 255, 255);}
+.headerTop{background-color: #fff;width: 1903px;height: 76px;min-width: 1216px;bottom: 3680px;}
+.headerTop .content{background-color: rgb(214, 91, 91);width: 1280px;height: 83px;margin: 0 auto;position: relative;}
+.headerTop h3{background-color: #fff;position: absolute;font-size: 19px;top: 10%;padding: 20px;}
+.headerTop .menu{background-color: rgba(112, 199, 86, 0.651);height: 76px;width: 530px;float: right;}
