--- a/03netmarble/css/style.css
+++ b/03netmarble/css/style.css
@@ -43,10 +43,12 @@
 .headerTop .menu li{float: right; width: calc(100% / 3 );
     text-align: center;font-size: 19px;padding: 25px;}
 
-.line{width: 1280px;height: 124px;margin: 0 auto;margin-top: 169px; }
+.line{width: 1280px;height: 124px;margin: 0 auto;margin-top: 169px;position: relative; }
 .line h2{font-size: 44px;line-height: 62px;text-align: left;}
 
-.line:after{content: "";position: absolute;bottom: -320px;left: 354;
+.line:after{content: "";position: absolute;bottom: -20px;left: 354;
     width: 70px;
     height: 5px;
     background-color: #ffd44a;}
+
+.tex01 p{font-size: 18px;line-height: 28px; float: right;height: 56px;width: 1000px;padding: 50px;}    
