--- a/04college/css/style.css
+++ b/04college/css/style.css
@@ -67,44 +67,52 @@
             padding: 10px 20px;color: #fff;
         }
 
-        .next,
-        .prev{position: absolute;top: 50%;margin-top: -50px;cursor:pointer}
-
-        .next{right: 0;}
-        
-        .bx-wrapper {
-            -moz-box-shadow: 0 0 0 #ccc;
-            -webkit-box-shadow: 0 0 0 #ccc;
-            box-shadow: 0 0 0 #ccc;
-            border: 0 none;
-            margin-bottom: 0;
-        }
-        .bx-wrapper .bx-pager{
-            bottom: 30px;
-        }
-        .bx-wrapper .bx-pager.bx-default-pager a:hover, 
-        .bx-wrapper .bx-pager.bx-default-pager a.active, 
-        .bx-wrapper .bx-pager.bx-default-pager a:focus {
-            background: #1e672c(88 0% 0%);
-        }
-
     
-
-
-
 
 #section .sec2st>ul>li{float: left;width: 300px;height: 225px;}
 
 #section .sec2st>ul>li{background: white;}
 #section .sec2st>ul>li:nth-child(2n){background-color:pink;}
 
-#section .sec2st>ul>li:nth-child(1){width: 900px;height: 450px;}
-#section .sec2st>ul>li:nth-child(2){height: 450px;}
-#section .sec2st>ul>li:nth-child(3){}
-#section .sec2st>ul>li:nth-child(4){}
-#section .sec2st>ul>li:nth-child(5){}
-#section .sec2st>ul>li:nth-child(6){}
-#section .sec2st>ul>li:nth-child(7){}
-#section .sec2st>ul>li:nth-child(8){width: 900px;}
+#section .sec2st>ul>li:nth-child(1){width: 900px;height: 450px;background-image: url(../images/slide01.jpg);}
+#section .sec2st>ul>li:nth-child(2){height: 450px;background-image: url(../images/skun2.jpg);}
+#section .sec2st>ul>li:nth-child(3){background-color: #1e672c;}
+
+#section .sec2st>ul>li:nth-child(4){padding:20px;background-image: url(../images/skun3.jpg);}
+#section .sec2st>ul>li:nth-child(4) h3{margin-bottom: 20px;color: #1e672c;}
+#section .sec2st>ul>li:nth-child(4) .bar{height: 3px;background-color: #fff;margin-bottom: 20px;}
+#section .sec2st>ul>li:nth-child(4) .notice{font-size: 14px;}
+#section .sec2st>ul>li:nth-child(4) .notice p{
+    width: 190px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+#section .sec2st>ul>li:nth-child(4) .notice li{
+    background-image: url(../images/notice_icon.png);
+    background-repeat: no-repeat;
+    background-position: 0 50%;
+    margin-bottom: 10px;
+}
+#section .sec2st>ul>li:nth-child(4) .notice li a{text-indent: 7px;display: block;position: relative;}
+#section .sec2st>ul>li:nth-child(4) .notice li span{display: block;position: absolute;right: 0;top: 0;}
+#section .sec2st>ul>li:nth-child(5){background-color: #fff;}
+#section .sec2st>ul>li:nth-child(6){ background-image: url(../images/skun5.png);} 
+#section .sec2st>ul>li:nth-child(6):hover{transform:translate(-5px,-5px);
+                                          box-shadow: 5px 5px 5px rgba(0,0,0,0.3);
+                                          ;transition:0.3s; }
+
+#section .sec2st>ul>li:nth-child(6) .box{width: 300px;height: 51px;background-color: rgb(0, 0, 0);
+                                         opacity: 50%;margin-top: 175px;}
+#section .sec2st>ul>li:nth-child(6) .box h3{color: #fff;text-align: center;padding:13px;}
 
 
+#section .sec2st>ul>li:nth-child(7){background-image: url(../images/skun6.png);}
+#section .sec2st>ul>li:nth-child(7) .playButton {width: 60px;height: 60px;background-color: rgb(0, 0, 0); 
+                                          opacity: 80%; margin: 0 auto; margin-top: 90px;border-radius: 30px;}
+#section .sec2st>ul>li:nth-child(7) .playButton img{margin: 0 auto;padding: 15px}
+
+#section .sec2st>ul>li:nth-child(8){width: 900px;background-image: url(../images/slide03.png);}
+
+footer{width: 1500px;}
+footer p{font-size: 14px; line-height: 30px;color: #9d9d9d;text-align: center; margin-right: -300px;}
