--- a/06ybtour/css/style.css
+++ b/06ybtour/css/style.css
@@ -73,17 +73,17 @@ p.title{font-weight: bold; left: 335px;}
 }
 
 .textWrap{width: 482px;height: 300px; float: left; }
-.text{margin-top: 35px; margin-left: 41px;}
+.text{margin-top: 35px; margin-left: 41px; }
 .text h1{font-size: 64px; }
 .text .line02{width: 83px; height: 5px;background-color: rgb(0, 0, 0); 
                 margin-left:260px; margin-bottom: 20px;}
 .text h3{font-size: 28px;line-height: 37px;}
 
-.content{float: left; padding: 0 17px 0 0;  }
+.content{float: left; padding: 0 15px 0 0;  }
 .content img{padding: 16px 0 0;}
 
 .content .box{position: absolute;background-color:#ffcb31;
-   ;width: 233px; margin-top: -25px;}
+   ;width: 234px; margin-top: -50px;}
 .content ul{padding: 15px;cursor: pointer; }
 .content li{float: left; margin-left: 10px;}
 .content li h3{font-size: 16px; color: rgb(0, 0, 0);}
@@ -92,13 +92,62 @@ p.title{font-weight: bold; left: 335px;}
 
 
 /* sec02 */
-.sec02{width: 981px;height: 495px;background-color: rgb(84, 230, 230);
-            margin: 0 auto; margin-top: 16px;     
+.sec02{width: 981px;height: 495px;
+            margin: 0 auto; margin-top: 40px;     
 }
 
-.sliderWrap{width: 234px;height: 240px;}
-.sliderWrap .box{position: absolute;background-color:#ffcb31;
-    ;width: 234px; margin-top: -70px;}
+.travel{padding: 0 15px 0 0;float: left;}
+.sliderWrap{width: 234px;height: 240px; float: left; }
+.sliderbox{position: absolute;background-color:rgba(255, 199, 44, 0.5);
+    width: 234px;bottom: 0; height: 65px;}
 .sliderWrap ul{padding: 15px;cursor: pointer;}
+.sliderWrap li{float: left;margin-left: 10px;}
+.sliderWrap li h3{font-size: 16px; padding: 10px 0;}
+
+
+
+.swiper-button-next{
+    background: url(../images/next01.png) no-repeat;
+   background-position:center; background-size: 100%;
+}
+
+.swiper-button-prev{
+    background: url(../images/prev01.png) no-repeat;
+    background-position:center;background-size: 100%;
+}
+
+
+.swiper-button-next:after,.swiper-button-prev::after{
+    display: none;
+}
+
+
+
+.travel{float: left; padding: 0 15px 0 0;  }
+
+.travel .box{position: absolute;background-color:#ffcb31;
+   ;width: 234px; margin-top: -50px;}
+.travel ul{padding: 15px;cursor: pointer; }
+.travel li{float: left; margin-left: 10px;}
+.travel li h3{font-size: 16px; color: rgb(0, 0, 0);}
+.travel li h4{font-size: 16px; color: #1f3b96;}
+.travel .box img{position: absolute; left: 200px; bottom: 16px; }
+
+.travel:nth-child(4){padding: 0 0 14px ;}
+.travel:nth-child(8){padding:  0;}
+
+
+.balloon01{
+    position: absolute;
+    right: 600px;
+    top: 300px; z-index:-10;
+    animation: bal 2s infinite alternate
+}
+@keyframes bal{
+    from{transform: translateY(20px);}
+    to{transform: translateY(0px);}
+}
+
+
 
 
