--- a/06ybtour/css/style.css
+++ b/06ybtour/css/style.css
@@ -49,7 +49,30 @@ p.title{font-weight: bold; left: 335px;}
 .slide01 ul{margin: 0 auto;}
 .slide01 li{left: 200px;float: left;}
 
- 
+
+
+.slide fieldset{border: 0 none;}
+.slide .blind{display: block;position: absolute;left: 0;top: -999px;}
+.slide form{width: 400px;margin: 0 auto}
+.field label{display: block;padding: 5px 0;}
+.field select{
+    width: 100%;height: 40px;font-size: 1em;
+    padding: 0 1em;
+    border-radius: 3px;
+}
+.field select:focus{outline: none;}
+.field.date,.field.air{display: flex;position: relative;}
+
+.field div{width: calc( ( 100% - 10px ) / 2 );}
+.field div:nth-of-type(1){margin-right: 10px;}
+.field .inp-field{
+    width: 100%;font-size: 1em;height: 40px;
+    text-align: right;padding: 0 10px;
+    border-radius: 3px;
+    border: 1px solid #ccc;
+}
+.field.date .inp-field:focus{outline: none;}
+
 
 
 
@@ -139,8 +162,8 @@ p.title{font-weight: bold; left: 335px;}
 
 .balloon01{
     position: absolute;
-    right: 600px;
-    top: 300px; z-index:-10;
+    right: 500px;
+    top:350px; z-index:-10;
     animation: bal 2s infinite alternate
 }
 @keyframes bal{
