--- a/06ybtour/css/style.css
+++ b/06ybtour/css/style.css
@@ -38,9 +38,26 @@ p.title{font-weight: bold; left: 335px;}
              justify-content: center; padding: 19px; position: relative;
              border-left:1px solid #eee}
 .mainMenu li:last-child{border-right:1px solid #eee}
-.mainMenu li:hover{background-color: #ffcb31;transition:0.3s}
+.mainMenu li:hover{background-color:#ffcb31 ;transition:0.3s}
+
+.mainMenu ul li .active,
+.mainMenu ul li :hover{background: #ffcb31;color:white}
+
+
 .mainMenu li a{font-size: 17px; text-align: center;}
 .line01{background-color: #ffcb31;height: 4px; }
+
+
+
+/* sub01  citytour */
+
+
+
+
+
+
+
+
 
 /* sec01 */
 .sec01{width: 982px;height: 532px;margin: 0 auto; margin-top: 56px;}
@@ -99,12 +116,28 @@ button{font-size: 20px; padding: 10px 30px; margin-top: 12px; color: #1f3b96; ba
     margin-bottom: 0;;
 }
 
+
+
+
 .textWrap{width: 482px;height: 300px; float: left; }
 .text{margin-top: 35px; margin-left: 41px; }
 .text h1{font-size: 64px; }
 .text .line02{width: 83px; height: 5px;background-color: rgb(0, 0, 0);
                 margin-left:260px; margin-bottom: 20px;}
 .text h3{font-size: 28px;line-height: 37px;}
+
+
+
+.textWrap .balloon01{
+    position: absolute;
+    
+    top:350px; z-index:-10;
+    animation: bal 2s infinite alternate
+}
+@keyframes bal{
+    from{transform: translateY(20px);}
+    to{transform: translateY(0px);}
+}
 
 .content{float: left; padding: 0 15px 0 0;  }
 .content img{padding: 16px 0 0;}
@@ -165,6 +198,13 @@ button{font-size: 20px; padding: 10px 30px; margin-top: 12px; color: #1f3b96; ba
 
 
 
+
+/* citytour */
+
+
+
+
+
 /* footer */
 
 .footerWrap{height: 113px;width: 980px;margin: 0 auto;}
@@ -175,17 +215,14 @@ button{font-size: 20px; padding: 10px 30px; margin-top: 12px; color: #1f3b96; ba
 
 
 
-.balloon01{
-    position: absolute;
-    right: 500px;
-    top:350px; z-index:-10;
-    animation: bal 2s infinite alternate
-}
-@keyframes bal{
-    from{transform: translateY(20px);}
-    to{transform: translateY(0px);}
-}
 
 
 
-
+/* common  */
+.container{width: 980px;margin: 0 auto;}
+.d-flex{display: flex !important;}
+.j-center{justify-content: center !important;}
+.j-between{justify-content: space-between !important;}
+.a-center{align-items: center !important;}
+.py-5{padding: 3em 0 !important;}
+.py-8{padding: 5em 0 !important;}
