--- a/06ybtour/css/style.css
+++ b/06ybtour/css/style.css
@@ -38,11 +38,10 @@ p.title{font-weight: bold; left: 335px;}
              justify-content: center; padding: 19px; position: relative;
              border-left:1px solid #eee}
 .mainMenu li:last-child{border-right:1px solid #eee}
-.mainMenu li:hover{background-color:#ffcb31 ;transition:0.3s}
 
-.mainMenu ul li .active,
-.mainMenu ul li :hover{background: #ffcb31;color:white}
-
+.mainMenu>ul>li>a:active{color: #1f3b96;}
+.mainMenu ul li:hover{background-color:#ffcb31 ;transition:0.3s;color: #1f3b96;}
+.mainMenu li a:hover{color: #ffffff;}
 
 .mainMenu li a{font-size: 17px; text-align: center;}
 .line01{background-color: #ffcb31;height: 4px;  }
@@ -208,7 +207,6 @@ button{font-size: 20px; padding: 10px 30px; margin-top: 12px; color: #1f3b96; ba
 /* footer */
 
 .footerWrap{height: 113px;width: 980px;margin: 0 auto;}
-.footerWrap ul{}
 .footerWrap li{float: left; padding: 29px 10px 20px; cursor: pointer; }
 .footerWrap li:first-child{padding: 29px 0 20px;}
 .footerWrap p{font-size: 12px; color: rgb(129, 129, 129);}
@@ -220,9 +218,4 @@ button{font-size: 20px; padding: 10px 30px; margin-top: 12px; color: #1f3b96; ba
 
 /* common  */
 .container{width: 980px;margin: 0 auto;}
-.d-flex{display: flex !important;}
-.j-center{justify-content: center !important;}
-.j-between{justify-content: space-between !important;}
-.a-center{align-items: center !important;}
-.py-5{padding: 3em 0 !important;}
 .py-8{padding: 5em 0 !important;}
